--- a/index.html
+++ b/index.html
@@ -6,31 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header class="header">
         <div class="header_top">
             <div class="container">
-                <a href="#">Phone number</a>
-                <a href="#">E-mail</a>
-                <a href="#">Contact us!</a>
+                <a class="header_phone" href="tel:79066625633">Phone number</a>
+                <a class="header_email" href="#">E-mail</a>
+                <a class="header_btn" href="#">Contact us!</a>
             </div>
         </div>
         <div class="header_content">
-            <div class="header_logo">
-                <a href="#">
-                    <img src="img/logo.png" alt="">
-                </a>
+            <div class="container">
+                <div class="header_logo">
+                    <a href="#">
+                        <img src="img/logo.png" alt="">
+                    </a>
+                </div>
+                <nav class="menu">
+                    <ul>
+                        <li><a href="#">Main</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Shop</a></li>
+                        <li><a href="#">Contacts</a></li>
+                    </ul>
+                </nav>
             </div>
-            <nav class="menu">
-                <ul>
-                    <li><a href="#">Main</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Shop</a></li>
-                    <li><a href="#">Contacts</a></li>
-                </ul>
-            </nav>
         </div>
     </header>
 </body>
