--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700|Roboto:400,500&amp;subset=cyrillic"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -16,7 +18,7 @@
             <div class="container">
                 <a class="header_phone" href="tel:79066625633">Phone number</a>
                 <a class="header_email" href="#">E-mail</a>
-                <a class="header_btn" href="#">Contact us!</a>
+                <a class="header_btn" href="#">Contact us Right Now!</a>
             </div>
         </div>
         <div class="header_content">
