--- a/index.html
+++ b/index.html
@@ -8,37 +8,47 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fonts.css">
     <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700|Roboto:400,500&amp;subset=cyrillic"
         rel="stylesheet">
+    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
 </head>
 
 <body>
     <header class="header">
         <div class="header_top">
             <div class="container">
-                <a class="header_phone" href="tel:79066625633">Phone number</a>
-                <a class="header_email" href="#">E-mail</a>
-                <a class="header_btn" href="#">Contact us Right Now!</a>
+                <div class="header_contacts">
+                    <a class="header_phone" href="tel:79066625633"> + 7(960) 643 33 71 </a>
+                    <a class="header_email" href="#">alibert22@mail.ru</a>
+                    <a class="header_btn" href="#">Бесплатная консультация!</a>
+                </div>
             </div>
         </div>
         <div class="header_content">
             <div class="container">
-                <div class="header_logo">
-                    <a href="#">
-                        <img src="img/logo.png" alt="">
-                    </a>
+                <div class="header_content-inner">
+                    <div class="header_logo">
+                        <a href="#">
+                            <img src="img/logo.png" alt="">
+                        </a>
+                    </div>
+                    <nav class="menu">
+                        <ul>
+                            <li><a href="#">Главная</a></li>
+                            <li><a href="#">О нас</a></li>
+                            <li><a href="#">Портфолио</a></li>
+                            <li><a href="#">Контакты</a></li>
+                        </ul>
+                    </nav>
                 </div>
-                <nav class="menu">
-                    <ul>
-                        <li><a href="#">Main</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Shop</a></li>
-                        <li><a href="#">Contacts</a></li>
-                    </ul>
-                </nav>
             </div>
         </div>
     </header>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="js/jquery.fancybox.min.js"></script>
 </body>
 
 </html>
