--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700|Roboto:400,500&amp;subset=cyrillic"
         rel="stylesheet">
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -19,9 +20,10 @@
         <div class="header_top">
             <div class="container">
                 <div class="header_contacts">
-                    <a class="header_phone" href="tel:79066625633"> + 7(960) 643 33 71 </a>
-                    <a class="header_email" href="#">alibert22@mail.ru</a>
-                    <a class="header_btn" href="#">Бесплатная консультация!</a>
+                    <a class="header_phone" href="tel:79066625633"> + 7(123) 456 67 89 </a>
+                    <a class="header_email" href="#">emailaddress_example@mail.ru</a>
+                    <a data-fancybox data-src="#modal" href="javascript:;" class="header_btn" href="#">Бесплатная
+                        консультация!</a>
                 </div>
             </div>
         </div>
@@ -46,9 +48,84 @@
         </div>
     </header>
 
+    <section class="slider">
+        <div class="container">
+            <div class="slider_inner">
+                <div class="slider_item">
+                    <div class="slider_item-content">
+                        <div class="slider_title">
+                            Отделка квартир под ключ
+                        </div>
+                        <div class="slider_text">
+                            Включает в себя укладку напольного покрытия и плитки, оформление стен (покраска или поклейка
+                            обоев), монтаж выключателей
+                            и розеток, установку сантехники. Иногда застройщики дарят новоселам мебель.
+                        </div>
+                        <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
+                            Оставить заявку
+                        </a>
+                    </div>
+                </div>
+                <div class="slider_item">
+                    <div class="slider_item-content">
+                        <div class="slider_title">
+                            Отделка квартир под ключ
+                        </div>
+                        <div class="slider_text">
+                            Включает в себя укладку напольного покрытия и плитки, оформление стен (покраска или поклейка
+                            обоев), монтаж выключателей
+                            и розеток, установку сантехники. Иногда застройщики дарят новоселам мебель.
+                        </div>
+                        <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
+                            Оставить заявку
+                        </a>
+                    </div>
+                </div>
+                <div class="slider_item">
+                    <div class="slider_item-content">
+                        <div class="slider_title">
+                            Отделка квартир под ключ
+                        </div>
+                        <div class="slider_text">
+                            Включает в себя укладку напольного покрытия и плитки, оформление стен (покраска или поклейка
+                            обоев), монтаж выключателей
+                            и розеток, установку сантехники. Иногда застройщики дарят новоселам мебель.
+                        </div>
+                        <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
+                            Оставить заявку
+                        </a>
+                    </div>
+                </div>
+                <div class="slider_item">
+                    <div class="slider_item-content">
+                        <div class="slider_title">
+                            Отделка квартир под ключ
+                        </div>
+                        <div class="slider_text">
+                            Включает в себя укладку напольного покрытия и плитки, оформление стен (покраска или поклейка
+                            обоев), монтаж выключателей
+                            и розеток, установку сантехники. Иногда застройщики дарят новоселам мебель.
+                        </div>
+                        <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
+                            Оставить заявку
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <div id="modal">
+        <h2>Hello!</h2>
+        <p>Something to say</p>
+    </div>
+
+    <script src=" https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js">
+    </script>
     <script src="js/jquery.fancybox.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
