--- a/index.html
+++ b/index.html
@@ -115,6 +115,71 @@
         </div>
         </div>
     </section>
+    <section class="about">
+        <div class="container">
+            <div class="about_top">
+                <div class="about_title-box">
+                    <div class="about_title">
+                        Наши услуги
+                    </div>
+                    <div class="about_text">
+                        Какое-то описание услуг:укладку напольного покрытия и плитки, оформление стен (покраска или
+                        поклейка
+                        обоев), монтаж выключателей
+                    </div>
+                </div>
+                <div class="about_btn">
+                    <a href="#">
+                        Показать все услуги
+                    </a>
+                </div>
+            </div>
+            <div class="about_items">
+                <div class="item">
+                    <img src="img/logo_test.png" class="about_item_img" alt="">
+                    <div class="about_item_title">
+                        Укладка плитки
+                    </div>
+                    <div class="about_item_text">
+                        Полная укладка плитки и кучу других умных слов
+                    </div>
+                    <div class="about_item_btn">
+                        <a class="about_item_link" href="#">Подробнее</a>
+                        <a data-fancybox data-src="#modal" href="javascript:;" class="default_btn">
+                            Подробнее</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="img/logo_test.png" class="about_item_img" alt="">
+                    <div class="about_item_title">
+                        Оформление стен
+                    </div>
+                    <div class="about_item_text">
+                        Полная укладка плитки и кучу других умных слов
+                    </div>
+                    <div class="about_item_btn">
+                        <a class="about_item_link" href="#">Подробнее</a>
+                        <a data-fancybox data-src="#modal" href="javascript:;" class="default_btn">
+                            Подробнее</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="img/logo_test.png" class="about_item_img" alt="">
+                    <div class="about_item_title">
+                        Напольное покрытие
+                    </div>
+                    <div class="about_item_text">
+                        Полная укладка плитки и кучу других умных слов
+                    </div>
+                    <div class="about_item_btn">
+                        <a class="about_item_link" href="#">Подробнее</a>
+                        <a data-fancybox data-src="#modal" href="javascript:;" class="default_btn">
+                            Подробнее</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <div id="modal">
         <h2>Hello!</h2>
