--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         <div class="header_top">
             <div class="container">
                 <div class="header_contacts">
-                    <a class="header_phone" href="tel:79066625633"> + 7(123) 456 67 89 </a>
-                    <a class="header_email" href="#">emailaddress_example@mail.ru</a>
+                    <a class="header_phone" href="tel:79066625633"> + 7(960) 643 33 71 </a>
+                    <a class="header_email" href="#">alibert22@mail.ru</a>
+                    <a class="header_instagram" href="#">@alibert_stroyka</a>
                     <a data-fancybox data-src="#modal" href="javascript:;" class="header_btn" href="#">Бесплатная
                         консультация!</a>
                 </div>
@@ -115,66 +116,70 @@
         </div>
         </div>
     </section>
-    <section class="about">
+    <section class="services">
         <div class="container">
-            <div class="about_top">
-                <div class="about_title-box">
-                    <div class="about_title">
-                        Наши услуги
+            <div class="services_top">
+                <div class="services_title-box">
+                    <div class="services_title">
+                        Услуги
                     </div>
-                    <div class="about_text">
-                        Какое-то описание услуг:укладку напольного покрытия и плитки, оформление стен (покраска или
-                        поклейка
-                        обоев), монтаж выключателей
+                    <div class="services_text">
+                        Снос или перенос межкомнатной, а иногда и межквартирной стены (включая несущие); Соединение
+                        туалетной и ванной комнат в
+                        единый санузел; Удаление антресолей, мусоропровода, воздуховодов в домах советской постройки
+                        (сталинки, хрущёвки,
+                        брежневки)
                     </div>
                 </div>
-                <div class="about_btn">
+                <div class="services_btn">
                     <a href="#">
                         Показать все услуги
                     </a>
                 </div>
             </div>
-            <div class="about_items">
+            <div class="services_items">
                 <div class="item">
-                    <img src="img/logo_test.png" class="about_item_img" alt="">
-                    <div class="about_item_title">
+                    <img src="img/logo_test.png" class="services_item_img" alt="">
+                    <div class="services_item_title">
                         Укладка плитки
                     </div>
-                    <div class="about_item_text">
-                        Полная укладка плитки и кучу других умных слов
+                    <div class="services_item_text">
+                        Укладка самой плитки, фриза, декора, при необходимости монтаж плиточных уголков, или заусовка
                     </div>
-                    <div class="about_item_btn">
-                        <a class="about_item_link" href="#">Подробнее</a>
+                    <div class="services_item_btn">
+                        <a class="services_item_link" href="#">Подробнее</a>
                         <a data-fancybox data-src="#modal" href="javascript:;" class="default_btn">
-                            Подробнее</a>
+                            Портфолио</a>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="img/logo_test.png" class="about_item_img" alt="">
-                    <div class="about_item_title">
+                    <img src="img/logo_test.png" class="services_item_img" alt="">
+                    <div class="services_item_title">
                         Оформление стен
                     </div>
-                    <div class="about_item_text">
-                        Полная укладка плитки и кучу других умных слов
+                    <div class="services_item_text">
+                        Выбор материалов для ремонта и отделки стен с изучением технологии их применения.Снятие старой
+                        отделки стен.Черновая отделка стен.Финишная отделка стен.
                     </div>
-                    <div class="about_item_btn">
-                        <a class="about_item_link" href="#">Подробнее</a>
+                    <div class="services_item_btn">
+                        <a class="services_item_link" href="#">Подробнее</a>
                         <a data-fancybox data-src="#modal" href="javascript:;" class="default_btn">
-                            Подробнее</a>
+                            Портфолио</a>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="img/logo_test.png" class="about_item_img" alt="">
-                    <div class="about_item_title">
+                    <img src="img/logo_test.png" class="services_item_img" alt="">
+                    <div class="services_item_title">
                         Напольное покрытие
                     </div>
-                    <div class="about_item_text">
-                        Полная укладка плитки и кучу других умных слов
+                    <div class="services_item_text">
+                        Уложить ламинат. Настелить ковролин и линолеум. Покрытие лаком деревянного паркета. Полный
+                        монтаж напольных покрытий.
                     </div>
-                    <div class="about_item_btn">
-                        <a class="about_item_link" href="#">Подробнее</a>
+                    <div class="services_item_btn">
+                        <a class="services_item_link" href="#">Подробнее</a>
                         <a data-fancybox data-src="#modal" href="javascript:;" class="default_btn">
-                            Подробнее</a>
+                            Портфолио</a>
                     </div>
                 </div>
             </div>
