--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/jquery.formstyler.css">
+    <link rel="stylesheet" href="css/jquery.formstyler.theme.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -185,6 +187,82 @@
             </div>
         </div>
     </section>
+    <section class="about">
+        <div class="container">
+            <div class="about_inner">
+                <div class="about_title">
+                    О нас
+                </div>
+                <div class="about_text">
+                    По масштабам евроремонт должен был быть близок к капитальному. В него входили следующие работы:
+                    замена сантехники, коммуникаций,замена старых деревянных окон на новые пластиковые,установка
+                    натяжных
+                    потолков,поклейка дорогих обоев или альтернативные варианты: покраска стен, декоративная штукатурка
+                    и
+                    т.п., монтаж более технологичных напольных покрытий вместо линолеума.
+                </div>
+                <a href="#" class="about_btn default_btn">
+                    Узнать больше
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="form">
+        <div class="container">
+            <div class="form_inner">
+                <div class="form_content">
+                    <div class="form_title_box">
+                        <div class="form_title">
+                            Услуги
+                        </div>
+                        <div class="form_text">
+                            ыфооо РОларыволартоыл ол ыоларолыарлоыф аыр оалырфаолыфолваыфол лвуропдлжак орпьдлак
+                        </div>
+                    </div>
+                    <div class="form_box">
+                        <form>
+                            <div class="form_box_inner">
+                                <div class="form_box_left">
+                                    <label>
+                                        E-mail
+                                        <input type="text">
+                                    </label>
+                                    <label>
+                                        Phone number
+                                        <input type="text">
+                                    </label>
+                                    <label>
+                                        FIO
+                                        <input type="text">
+                                    </label>
+                                    <label>
+                                        Question topic
+                                        <select>
+                                            <option>---------------------------------------------</option>
+                                            <option>---------------------</option>
+                                            <option>--------------------</option>
+                                            <option>--------------------</option>
+                                        </select>
+                                    </label>
+                                </div>
+                                <div class="form_box_right">
+                                    <label>
+                                        <textarea>
+
+                                        </textarea>
+                                    </label>
+                                    <button class="default_btn" type="submit">
+                                        Получить консультацию
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <div id="modal">
         <h2>Hello!</h2>
@@ -195,6 +273,7 @@
     </script>
     <script src="js/jquery.fancybox.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/jquery.formstyler.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
