--- a/index.html
+++ b/index.html
@@ -264,6 +264,73 @@
         </div>
     </section>
 
+    <section class="advantages">
+        <div class="container">
+            <div class="advantages_inner">
+                <div class="advantages_item">
+                    <div class="advantages_title">
+                        Огромный опыт
+                    </div>
+                    <div class="advantages_text">
+                        Занимаемся отделочными работами больше 30 лет
+                        Занимаемся отделочными работами больше 30 лет
+                    </div>
+                </div>
+                <div class="advantages_item">
+                    <div class="advantages_title">
+                        О нас знают
+                    </div>
+                    <div class="advantages_text">
+                        Большое количество людей приходят к нам из-за сарафанного радио
+                        Большое количество людей приходят к нам из-за сарафанного радио
+                    </div>
+                </div>
+                <div class="advantages_item">
+                    <div class="advantages_title">
+                        Хороший инструмент
+                    </div>
+                    <div class="advantages_text">
+                        Мы пользуемся только дорогим инструментов и материалом
+                        Мы пользуемся только дорогим инструментов и материалом
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer_contacts">
+            <div class="container">
+                <div class="footer_inner">
+                    <div class="footer_info">
+                        <div class="footer_title">
+                            A-stroy
+                        </div>
+                        <div class="footer_text">
+                            Something to say about our job etc
+                        </div>
+                        <ul class="footer_contacts_list">
+                            <li><a href="#"> +7 (960) 743 33 12 </a></li>
+                            <li><a href="#"> somethinginemail@yandex.ru </a></li>
+                            <li><a href="#"> ул. Стромынка, 20, Москва, 107996 </a></li>
+                        </ul>
+                    </div>
+                    <div class="footer_map">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d793.0057365808942!2d37.70082448433748!3d55.793950957504194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b5350a801db277%3A0x8dcc8f1a7839b169!2z0KDQotCjINCc0JjQoNCt0JA!5e0!3m2!1sru!2sru!4v1622810862660!5m2!1sru!2sru"
+                            style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer_copy_policy">
+            <div class="container">
+                <div class="copy_text">
+                    @ 2021 Template by AmNI5TIa. Ничего не защищено, это для вуза.
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <div id="modal">
         <h2>Hello!</h2>
         <p>Something to say</p>
