--- a/index.html
+++ b/index.html
@@ -309,9 +309,10 @@
                             Something to say about our job etc
                         </div>
                         <ul class="footer_contacts_list">
-                            <li><a href="#"> +7 (960) 743 33 12 </a></li>
-                            <li><a href="#"> somethinginemail@yandex.ru </a></li>
-                            <li><a href="#"> ул. Стромынка, 20, Москва, 107996 </a></li>
+                            <li><a class="footer_phone" href="#"> +7 (960) 743 33 12 </a></li>
+                            <li><a class="footer_email" href="#"> somethinginemail@yandex.ru </a></li>
+                            <li><a class="footer_address" href="#"> ул. Стромынка, 20, Москва, 107996 </a></li>
+                            <li><a class="footer_instagram" href="#"> albert_stroy </a></li>
                         </ul>
                     </div>
                     <div class="footer_map">
