--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="header_top">
             <div class="container">
                 <div class="header_contacts">
-                    <a class="header_phone" href="tel:79066625633"> + 7(960) 643 33 71 </a>
-                    <a class="header_email" href="#">alibert22@mail.ru</a>
-                    <a class="header_instagram" href="#">@alibert_stroyka</a>
+                    <a class="header_phone" href="tel:79066625633"> + 7(953) 633 12 47 </a>
+                    <a class="header_email" href="#">assetocorsa_car_deal@mail.ru</a>
+                    <a class="header_instagram" href="#">@assetocorsa_car_deal</a>
                     <a data-fancybox data-src="#modal" href="javascript:;" class="header_btn" href="#">Бесплатная
                         консультация!</a>
                 </div>
@@ -35,14 +35,14 @@
                 <div class="header_content-inner">
                     <div class="header_logo">
                         <a href="#">
-                            <img src="img/logo.png" alt="">
+                            <img class="main_logo" src="img/logo.png" alt="">
                         </a>
                     </div>
                     <nav class="menu">
                         <ul>
                             <li><a href="#">Главная</a></li>
                             <li><a href="#">О нас</a></li>
-                            <li><a href="#">Портфолио</a></li>
+                            <li><a href="#">Автомобили</a></li>
                             <li><a href="#">Контакты</a></li>
                         </ul>
                     </nav>
@@ -57,60 +57,71 @@
                 <div class="slider_item">
                     <div class="slider_item-content">
                         <div class="slider_title">
-                            Отделка квартир под ключ
+                            Юридическая чистота
                         </div>
                         <div class="slider_text">
-                            Включает в себя укладку напольного покрытия и плитки, оформление стен (покраска или поклейка
-                            обоев), монтаж выключателей
-                            и розеток, установку сантехники. Иногда застройщики дарят новоселам мебель.
+                            Все автомобили с пробегом, представленные в наших салонах, проходят комплексную юридическую
+                            проверку.
                         </div>
                         <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
-                            Оставить заявку
+                            Просмотреть каталог
                         </a>
                     </div>
                 </div>
                 <div class="slider_item">
                     <div class="slider_item-content">
                         <div class="slider_title">
-                            Отделка квартир под ключ
+                            Тщательная диагностика
                         </div>
                         <div class="slider_text">
-                            Включает в себя укладку напольного покрытия и плитки, оформление стен (покраска или поклейка
-                            обоев), монтаж выключателей
-                            и розеток, установку сантехники. Иногда застройщики дарят новоселам мебель.
+                            Наши дилерские центры проводят тщательную диагностику всех подержанных авто и гарантируют их
+                            техническая исправность и
+                            надёжность.
                         </div>
                         <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
-                            Оставить заявку
+                            Просмотреть каталог
                         </a>
                     </div>
                 </div>
                 <div class="slider_item">
                     <div class="slider_item-content">
                         <div class="slider_title">
-                            Отделка квартир под ключ
+                            Сервис
                         </div>
                         <div class="slider_text">
-                            Включает в себя укладку напольного покрытия и плитки, оформление стен (покраска или поклейка
-                            обоев), монтаж выключателей
-                            и розеток, установку сантехники. Иногда застройщики дарят новоселам мебель.
-                        </div>
+                            Мы осуществляем сервисное и техническое обслуживание ТС. Все работы выполняются
+                            высококвалифицированными мастерами с
+                            многолетним практическим опытом работы. </div>
                         <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
-                            Оставить заявку
+                            Просмотреть каталог
                         </a>
                     </div>
                 </div>
                 <div class="slider_item">
                     <div class="slider_item-content">
                         <div class="slider_title">
-                            Отделка квартир под ключ
+                            Гарантия
                         </div>
                         <div class="slider_text">
-                            Включает в себя укладку напольного покрытия и плитки, оформление стен (покраска или поклейка
-                            обоев), монтаж выключателей
-                            и розеток, установку сантехники. Иногда застройщики дарят новоселам мебель.
+                            Мы предоставляем гарантию на автомобили, приобретённые в наших дилерских центрах.
                         </div>
                         <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
-                            Оставить заявку
+                            Просмотреть каталог
+                        </a>
+                    </div>
+                </div>
+                <div class="slider_item">
+                    <div class="slider_item-content">
+                        <div class="slider_title">
+                            Полный пакет документов.
+                        </div>
+                        <div class="slider_text">
+                            В продаже представлены авто б/у, имеющие все необходимые документы для передачи новому
+                            владельцу и регистрации в
+                            государственных органах.
+                        </div>
+                        <a data-fancybox data-src="#modal" href="javascript:;" class="slider_btn default_btn">
+                            Просмотреть каталог
                         </a>
                     </div>
                 </div>
@@ -126,11 +137,15 @@
                         Услуги
                     </div>
                     <div class="services_text">
-                        Снос или перенос межкомнатной, а иногда и межквартирной стены (включая несущие); Соединение
-                        туалетной и ванной комнат в
-                        единый санузел; Удаление антресолей, мусоропровода, воздуховодов в домах советской постройки
-                        (сталинки, хрущёвки,
-                        брежневки)
+                        В автосалонах AssetoCorsa Автомобили с пробегом» на постоянной основе действуют акции и
+                        специальные
+                        финансовые программы,
+                        благодаря которым Вы сможете купить автомобиль б/у в Москве и Московской области по максимально
+                        привлекательной
+                        стоимости. Условия и сроки действия спецпредложений, а также характеристики, комплектации и цены
+                        на авто с пробегом в
+                        наличии просьба уточнять у специалистов отдела продаж по многоканальному телефону или
+                        посредством формы обратной связи.
                     </div>
                 </div>
                 <div class="services_btn">
@@ -141,47 +156,47 @@
             </div>
             <div class="services_items">
                 <div class="item">
-                    <img src="img/logo_test.png" class="services_item_img" alt="">
+                    <img src="img/buy_logo.png" class="services_item_img" alt="">
                     <div class="services_item_title">
-                        Укладка плитки
+                        Купить
                     </div>
                     <div class="services_item_text">
-                        Укладка самой плитки, фриза, декора, при необходимости монтаж плиточных уголков, или заусовка
+                        Двух- или трёхлетний автомобиль с пробегом, имея характеристики новой модели, продаётся на
+                        30–40% дешевле нового.
                     </div>
                     <div class="services_item_btn">
                         <a class="services_item_link" href="#">Подробнее</a>
                         <a data-fancybox data-src="#modal" href="javascript:;" class="default_btn">
-                            Портфолио</a>
+                            Каталог</a>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="img/logo_test.png" class="services_item_img" alt="">
+                    <img src="img/sell_logo.png" class="services_item_img" alt="">
                     <div class="services_item_title">
-                        Оформление стен
+                        Продать
                     </div>
                     <div class="services_item_text">
-                        Выбор материалов для ремонта и отделки стен с изучением технологии их применения.Снятие старой
-                        отделки стен.Черновая отделка стен.Финишная отделка стен.
+                        Самостоятельная продажа автомобиля с пробегом отнимет много времени на публикацию и мониторинг
+                        объявлений.
                     </div>
                     <div class="services_item_btn">
                         <a class="services_item_link" href="#">Подробнее</a>
                         <a data-fancybox data-src="#modal" href="javascript:;" class="default_btn">
-                            Портфолио</a>
+                            Продать автомобиль</a>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="img/logo_test.png" class="services_item_img" alt="">
+                    <img src="img/auction_logo.png" class="services_item_img" alt="">
                     <div class="services_item_title">
-                        Напольное покрытие
+                        Аукцион
                     </div>
                     <div class="services_item_text">
-                        Уложить ламинат. Настелить ковролин и линолеум. Покрытие лаком деревянного паркета. Полный
-                        монтаж напольных покрытий.
+                        Аукционы автомобилей с пробегом
                     </div>
                     <div class="services_item_btn">
                         <a class="services_item_link" href="#">Подробнее</a>
                         <a data-fancybox data-src="#modal" href="javascript:;" class="default_btn">
-                            Портфолио</a>
+                            Аукцион</a>
                     </div>
                 </div>
             </div>
@@ -194,12 +209,13 @@
                     О нас
                 </div>
                 <div class="about_text">
-                    По масштабам евроремонт должен был быть близок к капитальному. В него входили следующие работы:
-                    замена сантехники, коммуникаций,замена старых деревянных окон на новые пластиковые,установка
-                    натяжных
-                    потолков,поклейка дорогих обоев или альтернативные варианты: покраска стен, декоративная штукатурка
-                    и
-                    т.п., монтаж более технологичных напольных покрытий вместо линолеума.
+                    Официальный дилер AssetoCorsa Автомобили с пробегом» предоставляет возможность купить авто с
+                    пробегом в Москве и Московской
+                    области на специальных условиях.
+
+                    Покупка автомобиля б/у – это отличный вариант вложения денежных средств, если Вы не готовы
+                    приобрести новое ТС, не
+                    имеете достаточных финансовых ресурсов или предпочитаете менять авто каждые 2–3 года.
                 </div>
                 <a href="#" class="about_btn default_btn">
                     Узнать больше
@@ -214,10 +230,11 @@
                 <div class="form_content">
                     <div class="form_title_box">
                         <div class="form_title">
-                            Услуги
+                            Связаться с нами
                         </div>
                         <div class="form_text">
-                            ыфооо РОларыволартоыл ол ыоларолыарлоыф аыр оалырфаолыфолваыфол лвуропдлжак орпьдлак
+                            Оставьте заявку и в самое ближайшее время наши специалисты обсудят с вами, интересующий вас
+                            момент.
                         </div>
                     </div>
                     <div class="form_box">
@@ -225,24 +242,24 @@
                             <div class="form_box_inner">
                                 <div class="form_box_left">
                                     <label>
-                                        E-mail
+                                        E-mail:
                                         <input type="text">
                                     </label>
                                     <label>
-                                        Phone number
+                                        Номер телефона*(не обязательно):
                                         <input type="text">
                                     </label>
                                     <label>
-                                        FIO
+                                        Как к вам обращаться?
                                         <input type="text">
                                     </label>
                                     <label>
-                                        Question topic
+                                        Ваш вопрос:
                                         <select>
-                                            <option>---------------------------------------------</option>
-                                            <option>---------------------</option>
-                                            <option>--------------------</option>
-                                            <option>--------------------</option>
+                                            <option>Перезвоните мне</option>
+                                            <option>Направьте подробную информацию мне на почту</option>
+                                            <option>У меня есть претензия</option>
+                                            <option>Другой вопрос</option>
                                         </select>
                                     </label>
                                 </div>
@@ -272,8 +289,7 @@
                         Огромный опыт
                     </div>
                     <div class="advantages_text">
-                        Занимаемся отделочными работами больше 30 лет
-                        Занимаемся отделочными работами больше 30 лет
+                        Занимаемся продажей авто больше 30 лет
                     </div>
                 </div>
                 <div class="advantages_item">
@@ -281,17 +297,16 @@
                         О нас знают
                     </div>
                     <div class="advantages_text">
-                        Большое количество людей приходят к нам из-за сарафанного радио
-                        Большое количество людей приходят к нам из-за сарафанного радио
+                        Огромное количество людей доверяют нам и сотрудничают
                     </div>
                 </div>
                 <div class="advantages_item">
                     <div class="advantages_title">
-                        Хороший инструмент
+                        Юридическая чистота
                     </div>
                     <div class="advantages_text">
-                        Мы пользуемся только дорогим инструментов и материалом
-                        Мы пользуемся только дорогим инструментов и материалом
+                        Все автомобили с пробегом, представленные в наших салонах, проходят комплексную юридическую
+                        проверку.
                     </div>
                 </div>
             </div>
@@ -303,16 +318,23 @@
                 <div class="footer_inner">
                     <div class="footer_info">
                         <div class="footer_title">
-                            A-stroy
+                            AssetoCorsa
                         </div>
                         <div class="footer_text">
-                            Something to say about our job etc
+                            В автосалонах AssetoCorsa автомобили с пробегом на постоянной основе действуют акции и
+                            специальные финансовые программы,
+                            благодаря которым Вы сможете купить автомобиль б/у в Москве и Московской области по
+                            максимально привлекательной
+                            стоимости. Условия и сроки действия спецпредложений, а также характеристики, комплектации и
+                            цены на авто с пробегом в
+                            наличии просьба уточнять у специалистов отдела продаж по многоканальному телефону или
+                            посредством формы обратной связи.
                         </div>
                         <ul class="footer_contacts_list">
                             <li><a class="footer_phone" href="#"> +7 (960) 743 33 12 </a></li>
-                            <li><a class="footer_email" href="#"> somethinginemail@yandex.ru </a></li>
+                            <li><a class="footer_email" href="#"> assetocorsa_car_deal@yandex.ru </a></li>
                             <li><a class="footer_address" href="#"> ул. Стромынка, 20, Москва, 107996 </a></li>
-                            <li><a class="footer_instagram" href="#"> albert_stroy </a></li>
+                            <li><a class="footer_instagram" href="#"> assetocorsa_car_deal </a></li>
                         </ul>
                     </div>
                     <div class="footer_map">
